--- a/informe/introduccion.tex
+++ b/informe/introduccion.tex
@@ -4,4 +4,4 @@ Para este trabajo práctico nos propusimos implementar el modelo para generació
 
 En él se propone la generación de terreno montañoso a partir de elevaciones o picos. El modelo se puede aplicar tanto en 2D como 3D. La idea general del algoritmo es generar picos de manera aleatoria y luego obtener la altura final de cada porción del terreno promediando las influencias provenientes de las elevaciones.
 
-Nuestra meta es realizar dos implementaciones del modelo, una de ellas en C++ y la otra en ASM utilizando la tecnología SIMD. Para poder así demostrar cómo, utilizando SIMD, se puede acelerar el procesamiento.
+Realizaremos dos implementaciones del modelo, una de ellas en C++ y la otra en ASM utilizando la tecnología SIMD. Nuestro objetivo es comparar estas implementaciones y ver si nuestro código ASM es más veloz que el generado por el compilador (g++).
