--- a/informe/main.tex
+++ b/informe/main.tex
@@ -44,6 +44,8 @@
 	\newpage
 	
 	\input{implementacion}
+	%TODO mover input de ejemplos dentro de implementacion
+	\input{implementacionEjemplos}
 	\newpage
 	
 	\input{experimentacionyresultados}
