--- a/informe/implementacion.tex
+++ b/informe/implementacion.tex
@@ -79,3 +79,4 @@ La complejidad teórica del algoritmo es $\theta(divisions*peaks)$ ya que indefe
 Está versión es muy sencilla ya que se puede mapear directamente el pseudocódigo a código, con pocas modificaciones. Luego basta con compilar utilizando las mejoras de sse para contar con las herramientas de SIMD.
 
 \input{implementacionASM}
+\input{implementacionEjemplos}
