--- a/informe/implementacionASM.tex
+++ b/informe/implementacionASM.tex
@@ -23,6 +23,6 @@ Contamos con dos acumuladores, uno para la 'influencia' de los picos en esa posi
 \includegraphics[scale=0.5]{imagenes/calculoInfluencia.png} 
 \end{center}
 
-Utilizando el registro que contiene la influencia obtenemos si el pico influye (influencia > 0) o no (caso contrario) sobre cada una de las cuatro posiciones.
+Utilizando el registro que contiene la influencia obtenemos si el pico influye (influencia $>$ 0) o no (caso contrario) sobre cada una de las cuatro posiciones.
 
 Sumando esta información para cada pico obtenemos cuánta influencia, y de cuántos picos, tiene una posición determinada. Así al final del ciclo que recorre los picos solo nos queda dividir influencia por cantidad de picos y así obtenemos el valor real del terreno en la posición.
