--- a/informe/main.tex
+++ b/informe/main.tex
@@ -7,11 +7,13 @@
 
 \usepackage{hyperref}
 
-\usepackage{fancyhdr}
-\pagestyle{fancy}
+\usepackage{subcaption}
 
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
 
 \fancyhf{}
 
@@ -44,8 +46,6 @@
 	\newpage
 	
 	\input{implementacion}
-	%TODO mover input de ejemplos dentro de implementacion
-	\input{implementacionEjemplos}
 	\newpage
 	
 	\input{experimentacionyresultados}
