--- a/informe/conclusionymejoras.tex
+++ b/informe/conclusionymejoras.tex
@@ -1,1 +1,7 @@
-\section{Conclusión y Mejoras}
+\section{Conclusión}
+
+
+\subsection{Mejoras}
+Si se tiene en cuenta los valores máximos de cada división se podría llegar a utilizar enteros de menor tamaño para poder procesar de a más cantidad de datos. Por ejemplo si se usan enteros de 2Bytes se puede procesar hasta de a ocho por registro xmm.
+
+Se podría hacer la versión 3D. La complejidad en cuanto al algoritmo e implementación no es muy elevada, sí nos pareció complicado dibujar el terreno generado, ya que deberíamos usar herramientas de SDL que no tenemos muy claras, por esa cuestión y la falta de tiempo para aprenderlas decidimos incluir en este trabajo solo la versión 2D.
